--- a/maquetado/index.html
+++ b/maquetado/index.html
@@ -11,7 +11,18 @@
 </head>
 
 <body>
+
   <h2 class="title">Hello World</h2>
+
+  <div class="tech-card">
+    <img class="tech-card-logo" src="assets/react_icon.svg" alt="React Icon">
+    <h3 class="tech-card-name">ReactJS</h3>
+    <span class="tech-card-release">Release: 2013</span>
+    <p class="tech-card-description">
+      React is a declarative, component-based JavaScript library for building user interfaces
+    </p>
+  </div>
+
 </body>
 
 </html>
