--- a/maquetado/index.html
+++ b/maquetado/index.html
@@ -12,6 +12,11 @@
 
 <body>
 
+  <div class="nav-bar">
+    <img class="nav-bar-logo" src="assets/wolox_logo.svg" alt="Wolox Logo"></img>
+    <span class="nav-bar-brand">Developer Tools</span>
+  </div>
+
   <div class="main-content">
     <h2 class="title">Front-End Tools</h2>
     <div class="tech-card-container">
@@ -76,7 +81,7 @@
         <span class="tech-card-release">Release: 2009</span>
         <p class="tech-card-description">
           Node.js is a JavaScript runtime built on Chrome's V8 JavaScript engine. Uses an event-driven, non-blocking
-          I/O model taht makes it lightweight and efficient.ß
+          I/O model taht makes it lightweight and efficient.
         </p>
       </div>
       <div class="tech-card">
