--- a/maquetado/index.html
+++ b/maquetado/index.html
@@ -12,10 +12,10 @@
 
 <body>
 
-  <div class="nav-bar">
-    <img class="nav-bar-logo" src="assets/wolox_logo.svg" alt="Wolox Logo"></img>
+  <nav class="nav-bar">
+    <img class="nav-bar-logo" src="assets/wolox_logo.svg" alt="Wolox Logo">
     <span class="nav-bar-brand">Developer Tools</span>
-  </div>
+  </nav>
 
   <div class="main-content">
     <h2 class="title">Front-End Tools</h2>
