--- a/maquetado/index.html
+++ b/maquetado/index.html
@@ -105,6 +105,12 @@
     </div>
   </div>
 
+  <footer class="footer">
+    <span class="footer-slogan">WE ARE GAME CHANGERS</span>
+    <img class="footer-logo" src="assets/wolox_logo_white.svg" alt="Wolox Logo">
+    <span class="footer-copyright">Copyright 2018. Wolox. All rights reserved.</span>
+  </footer>
+
 </body>
 
 </html>
