--- a/maquetado/index.html
+++ b/maquetado/index.html
@@ -20,7 +20,7 @@
   <div class="main-content">
     <h2 class="title">Front-End Tools</h2>
     <div class="tech-card-container">
-      <div class="tech-card tech-card-main">
+      <div class="tech-card">
         <img class="tech-card-logo" src="assets/react_icon.svg" alt="React Icon">
         <h3 class="tech-card-name">ReactJS</h3>
         <span class="tech-card-release">Release: 2013</span>
@@ -66,7 +66,7 @@
 
     <h2 class="title">Back-End Tools</h2>
     <div class="tech-card-container">
-      <div class="tech-card tech-card-main">
+      <div class="tech-card">
         <img class="tech-card-logo" src="assets/rails_icon.png" alt="Rails Icon">
         <h3 class="tech-card-name">Ruby on Rails</h3>
         <span class="tech-card-release">Release: 2005</span>
